* fixed z-index values
* fixed event handling issues while selecting an element

--- a/stylebot/css/colorpicker.css
+++ b/stylebot/css/colorpicker.css
@@ -1,7 +1,7 @@
 /* base */
 .stylebot_colorpicker {
 	width: 208px;
-	z-index: 10000000;
+    z-index: 10000000000 !important;
 	height: 174px;
 	overflow: hidden;
 	position: absolute;
