--- a/stylebot/css/highlight.css
+++ b/stylebot/css/highlight.css
@@ -1,5 +1,5 @@
 .stylebot-selection {
     background-color: #65f166 !important;
     position: absolute !important;
-    z-index: 100000 !important;
+    z-index: 2147483644 !important;
 }
