--- a/stylebot/css/modal.css
+++ b/stylebot/css/modal.css
@@ -6,7 +6,7 @@
     min-height: 50% !important;
     background-color: #fff !important;
     border-radius: 5px !important;
-    z-index: 100000000001 !important;
+    z-index: 2147483647 !important;
     position: fixed !important;
     top: 15% !important;
     left: 25% !important;
@@ -35,7 +35,7 @@
 #stylebot-background {
     background-color: #000 !important;
     opacity: 0.7 !important;
-    z-index: 1002500 !important;
+    z-index: 2147483646 !important;
     height: 100%;
     width: 100%;
     display: none;
