--- a/stylebot/css/widget.css
+++ b/stylebot/css/widget.css
@@ -16,7 +16,7 @@
     top: 0% !important;
     width: 320px !important;
     -webkit-box-shadow: 0px 0px 5px #ccc !important;
-    z-index: 100000000000 !important;
+    z-index: 2147483645 !important;
 }
 
 /* @end */
